--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <div class="container wrap">
       <div class="row">
         <div class="board col-sm-12" id="board"></div>
+        <div class="promotion" id="promotion"></div>
       </div>
     </div>
 
